# mnn

./: meson.build  meson.options  peel_problems.md
res/: default-net.json  meson.build  mnn-app-window.ui  mnn-callsign-list-item-factory.ui  mnn-callsign-list-view-cell.ui  monday-night-net.gresource.xml  net.talinet.MondayNightNet.gschema.xml  radio.ki6kvz.MondayNightNet.gschema.xml  style.css
src/: config.hpp.in  main.cpp  meson.build  mnn.cpp  mnn.hpp  mnn_application.cpp  mnn_application.hpp  mnn_application_window.cpp  mnn_application_window.hpp  mnn_callsign_list_view_cell.cpp  mnn_callsign_list_view_cell.hpp  mnn_error.cpp  mnn_error.hpp  net_definition.cpp  net_definition.hpp  station.cpp  station.hpp
subprojects/: peel.wrap
test/: meson.build  station.cpp
